2009-03-11  Hironori Bono  <hbono@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=15790
        Ligatures aren't accounted for when manipulating VisiblePositions

        Verify that we can prevent a cursor from moving in the middle of an Indic ligature.

        * editing/deleting/skip-virama-001-expected.txt: Added.
        * editing/deleting/skip-virama-001.html: Added.

        * platform/mac-tiger/Skipped: This fix requires a customized cursorMovementIterator,
        which is not enabled on Tiger (see bug 24513).

2009-03-11  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Holger Freyther.

        [Gtk] Implement LayoutTestControllerGtk::setPrivateBrowsingEnabled
        https://bugs.webkit.org/show_bug.cgi?id=24487

        Enable http/tests/security/cross-frame-access-private-browsing.html test.

        * platform/gtk/Skipped:

2009-03-10  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Sam Weinig.

        <rdar://problem/6123770> Restrict access to document.cookie when making a cross-site XHR

        * http/tests/security/cookies/xmlhttprequest.html: We don't expose cookies for documents
        retrieved via XMLHttpRequest. Added a check to make sure that we don't forget about cross-
        origin restrictions if we ever decide to change that.

        * http/tests/xmlhttprequest/resources/get-set-cookie.cgi: While at it, fixed a broken check
        for Set-Cookie2.

2009-03-10  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=24503
        
        Test for hitting the cancel button of an absolutely-positioned form
        control.

        * fast/forms/search-abs-pos-cancel-button-expected.txt: Added.
        * fast/forms/search-abs-pos-cancel-button.html: Added.

2009-03-10  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin Adler.
